--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
                         <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="index.html">Home</a></li>
                         <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="about.html">About</a></li>
                         <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="products.html">Products</a></li>
-                        <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="store.html">Order</a></li>
+                        <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="https://buy.stripe.com/3cscNTf7W6oz7le288">Order</a></li>
                     </ul>
                 </div>
             </div>
@@ -48,7 +48,7 @@
                                     <span class="section-heading-upper">El Segundo Born and Rae'sed</span>
                                     <span class="section-heading-lower">About Us</span>
                                 </h2>
-                                <p>We are two local El Segundo High School Seniors, Araeya and Shayana Putnam, who have lived here our entire life. We love El Segundo, and want to bring a sweet smile to everyone's face this graduation season!</p>
+                                <p>Hi! We are Araeya and Shayana Putnam, two local El Segundo High School Seniors who are working hard to save up for college next fall. We love In-N-Out, the beach, and, of course, candy.  We’re so excited to share our delicious love filled candy leis with El segundo and both can’t wait to bring a sweet smile to everyone's face this graduation season!</p>
                                 <p class="mb-0">
                                     We are making leis for all graduation events this year, filled with delicious candy and love! 
                                 </p>
