--- a/products.html
+++ b/products.html
@@ -32,7 +32,7 @@
                         <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="index.html">Home</a></li>
                         <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="about.html">About</a></li>
                         <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="products.html">Products</a></li>
-                        <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="store.html">Order</a></li>
+                        <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="https://buy.stripe.com/3cscNTf7W6oz7le288">Order</a></li>
                     </ul>
                 </div>
             </div>
@@ -50,7 +50,7 @@
                     </div>
                     <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="assets/img/products-01.jpg" alt="..." />
                     <div class="product-item-description d-flex me-auto">
-                        <div class="bg-faded p-5 rounded"><p class="mb-0">These are our orignal product, the candy lei. Nothing beats the classics, and nothing beats the quality of our leis. $20 pre-order includes free shipping, week of graduation delivery, and smiles on your childrens faces!</p></div>
+                        <div class="bg-faded p-5 rounded"><p class="mb-0">These are our original product, the candy lei. Nothing beats the classics, and our focus on quality in this perfectly simple design leaves nothing to be desired. $15 pre-order, which includes customizable colors, free shipping week of graduation delivery, and a chocolate covered smiles on your children’s face!</p></div>
                     </div>
                 </div>
             </div>
@@ -68,7 +68,7 @@
                     </div>
                     <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="assets/img/products-02.jpg" alt="..." />
                     <div class="product-item-description d-flex ms-auto">
-                        <div class="bg-faded p-5 rounded"><p class="mb-0">We also have a nut-free option, to spread the lei love to everyone. At the same price point as the orignal, our nut-free leis are just as sweet!</p></div>
+                        <div class="bg-faded p-5 rounded"><p class="mb-0">We also have a nut-free option, to spread the lei love to everyone. At the same price point as the original, our nut-free leis are just as sweet!</p></div>
                     </div>
                 </div>
             </div>
@@ -79,14 +79,17 @@
                     <div class="product-item-title d-flex">
                         <div class="bg-faded p-5 d-flex ms-auto rounded">
                             <h2 class="section-heading mb-0">
-                                <span class="section-heading-upper">Speciality Lei</span>
+                                <span class="section-heading-upper">Godiva Lei</span>
                                 <span class="section-heading-lower">A Cut above</span>
                             </h2>
                         </div>
                     </div>
                     <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="assets/img/products-03.jpg" alt="..." />
                     <div class="product-item-description d-flex me-auto">
-                        <div class="bg-faded p-5 rounded"><p class="mb-0">We have limited stock of our speciality Leis, featuring Godiva Chocolate. These are the most luxary candy leis you will find, for the shipping inculded price of $30.</p></div>
+                        <div class="bg-faded p-5 rounded"><p class="mb-0">These are the most luxury candy leis you will find. Featuring smooth rich luxury Godiva Chocolates and a stunning golden design, these leis are made to impress.
+
+                            At just $25, wow you family, friends, or classmates with a leis that will make you or your child look like a billionaire. Attention! We do have limited stock of this item, so please preorder these leis while you still can!
+                            </p></div>
                     </div>
                 </div>
             </div>
