--- a/products.html
+++ b/products.html
@@ -32,7 +32,7 @@
                         <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="index.html">Home</a></li>
                         <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="about.html">About</a></li>
                         <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="products.html">Products</a></li>
-                        <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="https://buy.stripe.com/3cscNTf7W6oz7le288">Order</a></li>
+                        <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="https://buy.stripe.com/fZe15b8Jy7sD492145">Order</a></li>
                     </ul>
                 </div>
             </div>
