--- a/products.html
+++ b/products.html
@@ -88,14 +88,14 @@
                     <div class="product-item-description d-flex me-auto">
                         <div class="bg-faded p-5 rounded"><p class="mb-0">These are the most luxury candy leis you will find. Featuring smooth rich luxury Godiva Chocolates and a stunning golden design, these leis are made to impress.
 
-                            At just $25, wow you family, friends, or classmates with a leis that will make you or your child look like a billionaire. Attention! We do have limited stock of this item, so please preorder these leis while you still can!
+                            At just $20, wow you family, friends, or classmates with a leis that will make you or your child look like a billionaire. Attention! We do have limited stock of this item, so please preorder these leis while you still can!
                             </p></div>
                     </div>
                 </div>
             </div>
         </section>
         <footer class="footer text-faded text-center py-5">
-            <div class="container"><p class="m-0 small">Copyright &copy; Wave 2022</p></div>
+            <div class="container"><p class="m-0 small">Copyright &copy; Wave 2022, Any questions email raeandshaysleis@gmail.com</p></div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
