--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                             <span class="section-heading-lower">2022 Graduation Leis</span>
                         </h2>
                         <p class="mb-3">We are a family-owned, El Segundo Based company who strives to supply every graduating elementary, middle, and high school student with their very own handcrafted Candy Leis!</p>
-                        <div class="intro-button mx-auto"><a class="btn btn-primary btn-xl" href="https://buy.stripe.com/3cscNTf7W6oz7le288">Order Today</a></div>
+                        <div class="intro-button mx-auto"><a class="btn btn-primary btn-xl" https://buy.stripe.com/fZe15b8Jy7sD492145">Order Today</a></div>
                     </div>
                 </div>
             </div>
