--- a/products.html
+++ b/products.html
@@ -50,7 +50,7 @@
                     </div>
                     <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="assets/img/products-01.jpg" alt="..." />
                     <div class="product-item-description d-flex me-auto">
-                        <div class="bg-faded p-5 rounded"><p class="mb-0">These are our original product, the candy lei. Nothing beats the classics, and our focus on quality in this perfectly simple design leaves nothing to be desired. $15 pre-order, which includes customizable colors, free shipping week of graduation delivery, and a chocolate covered smiles on your children’s face!</p></div>
+                        <div class="bg-faded p-5 rounded"><p class="mb-0">These are our original product, the candy lei. Nothing beats the classics, and our focus on quality in this perfectly simple design leaves nothing to be desired. $15 pre-order, which includes customizable blue and red colors, free shipping week of graduation delivery, and a chocolate covered smiles on your children’s face!</p></div>
                     </div>
                 </div>
             </div>
@@ -88,14 +88,14 @@
                     <div class="product-item-description d-flex me-auto">
                         <div class="bg-faded p-5 rounded"><p class="mb-0">These are the most luxury candy leis you will find. Featuring smooth rich luxury Godiva Chocolates and a stunning golden design, these leis are made to impress.
 
-                            At just $20, wow you family, friends, or classmates with a leis that will make you or your child look like a billionaire. Attention! We do have limited stock of this item, so please preorder these leis while you still can!
+                            At the price of $20, wow you family, friends, or classmates with a leis that will make you or your child look like a billionaire. Attention! We do have limited stock of this item, so please preorder these leis while you still can!
                             </p></div>
                     </div>
                 </div>
             </div>
         </section>
         <footer class="footer text-faded text-center py-5">
-            <div class="container"><p class="m-0 small">Copyright &copy; Wave 2022, Any questions email raeandshaysleis@gmail.com</p></div>
+            <div class="container"><p class="m-0 small">Copyright &copy; Wave 2022, Any questions email raeandshaysleis@gmail.com. All sales are final.</p></div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
